# aind_dashboard

./: .flake8  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  aind_dashboard_codebase_structure.md  app.py  application.py  codebase.md  dead_code_analysis_60.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  shared_utils.py  test.ipynb  test_threshold_alerts.py
.github/workflows/: docker-publish.yml
app_elements/: __init__.py  app_main.py  loading_indicator.py
app_elements/app_content/: __init__.py  app_content.py
app_elements/app_content/app_dataframe/: __init__.py  app_dataframe.py  column_groups_config.py
app_elements/app_content/app_dataframe/tooltips/: __init__.py  subject_tooltip.py  subject_tooltip_service.py  tooltip_controller.py
app_elements/app_content/app_plot_content/: __init__.py  app_plot_content.py
app_elements/app_content/app_plot_content/app_rank_change_plot/: __init__.py  app_rank_change_plot.py
app_elements/app_content/app_plot_content/app_subject_heatmap/: __init__.py  app_subject_heatmap.py
app_elements/app_content/app_tooltip/: __init__.py  app_hover_tooltip.py
app_elements/app_filter/: __init__.py  app_filter.py
app_elements/app_sidebar/: __init__.py  app_sidebar.py
app_elements/app_subject_detail/: __init__.py  app_feature_chart.py  app_session_card.py  app_session_list.py  app_subject_compact_info.py  app_subject_detail.py  app_subject_image_loader.py  app_subject_percentile_heatmap.py  app_subject_percentile_timeseries.py  app_subject_timeseries.py
app_utils/: __init__.py  app_load_data.py  app_utils.py  cache_utils.py  filter_utils.py  percentile_utils.py  simple_logger.py  strata_utils.py  ui_utils.py
app_utils/app_alerts/: __init__.py  alert_coordinator.py  alert_service.py
app_utils/app_analysis/: __init__.py  bootstrap_manager.py  overall_percentile_calculator.py  pipeline_manager.py  quantile_analyzer.py  reference_processor.py  statistical_utils.py  threshold_analyzer.py
app_utils/app_data_load/: __init__.py  app_load_data.py  data_loader.py
assets/: column_toggle_styles.css  custom_styles.css  style.css  tooltip_styles.css
callbacks/: __init__.py  callbacks.py  column_toggle_callbacks.py  filter_callbacks.py  session_interaction_callbacks.py  shared_callback_utils.py  subject_detail_callbacks.py  table_callbacks.py  tooltip_callbacks.py  visualization_callbacks.py
scripts/: README.md  fix_critical_issues.py  fix_remaining_format_issues.py  format_code.py  quick_format.sh
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_app_smoke.py
tests/e2e/test_integration/: __init__.py
tests/e2e/test_user_workflows/: __init__.py
tests/fixtures/: __init__.py  sample_data.py
tests/unit/: __init__.py  test_core_components.py  test_percentile_utils.py
tests/unit/test_callback_logic/: __init__.py  test_callback_integration.py  test_filter_callback_integration.py
tests/unit/test_data_operations/: __init__.py  test_enhanced_data_loader.py
tests/unit/test_statistical_analysis/: __init__.py  test_statistical_utils.py
tests/unit/test_ui_components/: __init__.py  test_alert_coordinator.py  test_dataframe_business_logic.py  test_ui_data_manager.py
tests/unit/test_utilities/: __init__.py  test_filter_utils.py  test_helper_functions.py  test_percentile_utils.py
